--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>My Resume</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        html{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+        html{
+            background-color: rgb(211, 234, 234);
+        }
+        h1{
+            font-family: "Updock", cursive;
+        }
+        h2{
+            font-family: "Updock", cursive;
+        }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1 id="main">Junaid Mohammed's Resume</h1>
@@ -26,13 +43,11 @@
     </p>
     <hr>
     <h2>Skills</h2>
-    <ul>
         <li>Python</li>
         <li>C++</li>
         <li>html</li>
         <li>CSS</li>
         <li>javascript</li>
-    </ul>
     <hr>
     <a href="./contact.html">Contact</a><br>
 
